# conductor-linux

./: .gitignore  README.md  cdl-ui  conductor-linux  conductor-ui  install.sh  pyproject.toml
src/cdl/: __init__.py  __main__.py  cli.py
src/cdl/commands/: __init__.py  agent.py  monitor.py  pr.py  repo.py  sync.py  workspace.py
src/cdl/core/: __init__.py  config.py  git.py  paths.py  tmux.py  user_config.py
src/cdl/utils/: __init__.py  colors.py  completions.py  fzf.py  process.py
src/cdl_ui/: __init__.py  app.py
tests/: __init__.py
